# actix_basic

./: Cargo.toml  README.md  tmp
src/: lib.rs  main.rs  user.rs
src/handlers/: handle.rs
src/models/: user.rs
static/: welcome.html
tests/: integration_test.rs
