[package]
name = "actix_basic"
version = "0.1.0"
authors = ["Dan Shields <nukemandan@protonmail.com>"]
edition = "2018"

[lib]
name = "actix_basic"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
reqwest = { version = "^0.10", features = ["json"] }
tokio = { version = "^0.2", features = ["full"] }