[package]
name = "actix_basic"
version = "0.1.0"
authors = ["Dan Shields <nukemandan@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^2.0"
actix-rt = "^1.0"
actix-files = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
simplelog = "^0.8.0"
validator = "^0.10"
validator_derive = "^0.10"

[dev-dependencies]
reqwest = { version = "^0.10", features = ["json"] }
